File: components/nexus-security/src/test/java/org/sonatype/virtualthread/SecuritySystemVirtualThreadTest.java